<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loading"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_200sdp"
    android:layout_marginHorizontal="@dimen/_20sdp"
    android:background="@drawable/dialog_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:fontFamily="@font/noto_serif_devanagari_condensed_bold"
        android:text="@string/update_alert_1"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/noto_serif_devanagari_condensed_medium"
        android:text="@string/update_alert_2"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/noto_serif_devanagari_condensed_medium"
        android:text="@string/update_alert_3"
        android:textColor="@color/black"
        android:textSize="@dimen/_10sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/noto_serif_devanagari_condensed_medium"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUpdateNow"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/red_button_background"
            android:fontFamily="@font/noto_serif_devanagari_condensed_medium"
            android:gravity="center"
            android:text="@string/update_alert_now"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUpdateLater"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:alpha="0.5"
            android:fontFamily="@font/noto_serif_devanagari_condensed_medium"
            android:gravity="center"
            android:text="@string/update_alert_later"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>
</LinearLayout>