<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loading"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_200sdp"
    android:layout_marginHorizontal="@dimen/_20sdp"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/ivPAClose"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:visibility="gone"
        android:src="@drawable/error_center_x" />


    <TextView
        android:id="@+id/tvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:fontFamily="@font/noto_serif_devanagari_condensed_medium"
        android:text="@string/profile_alert_string"
        android:textColor="#575757"
        android:textSize="19sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_100sdp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPAProfile"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/red_button_background"
            android:fontFamily="@font/popin_bold"
            android:gravity="center"
            android:text="@string/add_profile_detail"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPABusiness"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/red_button_background"
            android:fontFamily="@font/popin_bold"
            android:gravity="center"
            android:text="@string/add_business_detail"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>