<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/otpview_bg"
        tools:context=".activity.OtpActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"


                    >

                    <ImageView
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="@dimen/_90sdp"
                        android:src="@drawable/mobile_icon" />

                    <LinearLayout
                        android:id="@+id/llMobileView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_40sdp"
                        android:gravity="center"
                        android:orientation="vertical"
                       >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:fontFamily="@font/noto_serif_devanagari_condensed_bold"
                            android:text="SignUp / LogIn"
                            android:textColor="@color/main_color"
                            android:textSize="@dimen/_20sdp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_20sdp"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:layout_marginRight="@dimen/_20sdp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="@dimen/_30sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:src="@drawable/ic_mobile"
                                android:visibility="gone" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="@dimen/_10sdp"
                                android:background="@drawable/edt_line_bg"
                                android:gravity="center_vertical">

                                <ImageView
                                    android:layout_width="@dimen/_25sdp"
                                    android:layout_height="@dimen/_25sdp"
                                    android:src="@drawable/india" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/_5sdp"
                                    android:fontFamily="@font/noto_serif_devanagari_condensed_bold"
                                    android:text="+91"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/_15sdp" />

                                <EditText
                                    android:id="@+id/edtMobile"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@null"
                                    android:fontFamily="@font/noto_serif_devanagari_condensed_bold"
                                    android:hint="@string/Mobile_no"
                                    android:inputType="number"
                                    android:maxLength="10"
                                    android:paddingLeft="@dimen/_5sdp"
                                    android:paddingTop="@dimen/_5sdp"
                                    android:paddingRight="@dimen/_5sdp"
                                    android:paddingBottom="@dimen/_5sdp"
                                    android:textColor="@color/black"
                                    android:textColorHint="@color/black" />

                            </LinearLayout>
                        </LinearLayout>


                        <TextView
                            android:id="@+id/txtSendOtp"
                            style="@style/txtBtn"
                            android:layout_marginTop="@dimen/_30sdp"
                            android:text="@string/Send_otp"
                            android:textColor="@color/white" />

                        <!--<LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:src="@drawable/ic_resend">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/noto_serif_devanagari_condensed_medium"
                                android:text="@string/Resend_otp"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_13ssp" />
                        </LinearLayout>-->

                        <TextView
                            android:id="@+id/tvTerm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:fontFamily="@font/noto_serif_devanagari_condensed_medium"
                            android:gravity="center"
                            android:autoLink="all"
                            android:text="@string/signup_login_msg"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_9ssp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llOtpview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:fontFamily="@font/noto_serif_devanagari_condensed_bold"
                        android:text="OTP Verification"
                        android:textColor="@color/main_color"
                        android:textSize="@dimen/_20sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/noto_serif_devanagari_condensed_medium"
                        android:text="@string/Enter_otp"
                        android:textColor="@color/black" />

                    <in.aabhasjindal.otptextview.OtpTextView
                        android:id="@+id/otpTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textColor="@color/black"
                        app:bar_active_color="@color/main_color"
                        app:bar_enabled="false"
                        app:bar_error_color="@color/red"
                        app:bar_height="2dp"
                        app:bar_inactive_color="@color/black"
                        app:box_margin="@dimen/_5sdp"
                        app:height="@dimen/_25sdp"
                        app:length="6"
                        app:otp_box_background="@drawable/otp_bg"
                        app:otp_text_size="@dimen/_14sdp"
                        app:width="@dimen/_25sdp" />

                    <TextView
                        android:id="@+id/txtSubmitOtp"
                        style="@style/txtBtn"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:text="@string/Submit"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/txtBack"
                        style="@style/txtBtn"
                        android:layout_marginTop="@dimen/_7sdp"
                        android:text="@string/Back"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tvResend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/noto_serif_devanagari_condensed_medium"
                        android:text="@string/Resend_otp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/tvHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/edt_line_bg"
            android:text="Need Help"
            android:textColor="@color/main_color"
            android:textSize="@dimen/_16sdp" />
    </RelativeLayout>
</layout>
