<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".activity.UpdatProfileActivity">

        <include
            android:id="@+id/toolbarSupport"
            layout="@layout/toolbar_included" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtPersonal"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/Personal"
                android:gravity="center"
                android:fontFamily="@font/noto_serif_devanagari_condensed_bold"
                android:background="@drawable/btn_bg"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txtBusiness"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/Business"
                android:layout_marginLeft="@dimen/_10sdp"
                android:gravity="center"
                android:fontFamily="@font/noto_serif_devanagari_condensed_bold"
                android:background="@drawable/daily_img_bg"
                android:textColor="@color/main_color" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/llBusinessList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_110sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/noto_serif_devanagari_condensed_bold"
                    android:text="@string/Business_List"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical">


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvBuinnessList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:orientation="vertical"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                </LinearLayout>


            </LinearLayout>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fb_AddBusniess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/_16ssp"
                android:layout_marginRight="@dimen/_16ssp"
                android:layout_marginBottom="@dimen/_50sdp"
                android:src="@drawable/ic_add"
                android:visibility="gone"
                app:backgroundTint="@color/main_color"
                app:tint="@color/white" />

        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/llProfile"
            android:layout_marginTop="@dimen/_100sdp">

            <include
                android:id="@+id/ProfilSupport"
                layout="@layout/profile_included" />

        </LinearLayout>


    </RelativeLayout>
</layout>
